--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -13,9 +13,9 @@
       <ul class="list-group mb-4">
         {% for item in items %}
           <li>
-            {{item.title}} - {{item.status}}
+            {{item.name}} - {{item.status}}
 
-            {% if item.status == "Not Started" %}
+            {% if item.status == "Todo" or item.status == "Doing" %}
             <form action="/completeItem/{{item.id}}"method="post" >
             <button type="submit">Completed</button>
             </form>
