--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -15,7 +15,7 @@
           <li>
             {{item.name}} - {{item.status}}
 
-            {% if item.status == "Todo" or item.status == "Doing" %}
+            {% if item.status == "Todo" %}
             <form action="/completeItem/{{item.id}}"method="post" >
             <button type="submit">Completed</button>
             </form>
