--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -9,22 +9,34 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h2>Items</h2>
+      <h2>Todo Items</h2>
       <ul class="list-group mb-4">
-        {% for item in items %}
+        {% for item in view_model.todo_items %}
           <li>
             {{item.name}} - {{item.status}}
-
-            {% if item.status == "Todo" %}
             <form action="/doingItem/{{item.id}}"method="post" >
             <button type="submit">Doing</button>
             </form>
-            {% elif item.status == "Doing" %}
+            </li>
+        {% endfor %}
+      </ul>
+      <h2>Doing Items</h2>
+      <ul class="list-group mb-4">
+        {% for item in view_model.doing_items %}
+          <li>
+            {{item.name}} - {{item.status}}
             <form action="/completeItem/{{item.id}}"method="post" >
             <button type="submit">Completed</button>
             </form>
-            {% endif  %}
             </li>
+        {% endfor %}
+      </ul>
+      <h2>Completed Items</h2>
+      <ul class="list-group mb-4">
+        {% for item in view_model.done_items %}
+          <li>
+            {{item.name}} - {{item.status}}
+          </li>
         {% endfor %}
       </ul>
     </div>
